-- documentation, see http://haskell.org/cabal/users-guide/

name:                crisis
version:             0.0
synopsis:            Blottleships AI
-- description:         
license:             AllRightsReserved
license-file:        LICENSE
author:              Nathan van Doorn
maintainer:          nvd1234@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable crisis
  main-is:             Main.hs
  other-modules:       Crisis.Util, Crisis.Strategy
  -- other-extensions:    
  build-depends:       base >=4 && <5, array >=0.4 && <0.6, random >= 1.0 && < 1.2, ansi-terminal >= 0.6 && < 0.7
  hs-source-dirs:      src
  default-language:    Haskell2010

  if impl(ghc>=7.8)
    cpp-options: -DGHC78